# Programming_Labs_2025-2026_Erika_Stepina

./: .gitignore
Lab 1 Stepina Erika/: CMakeLists.txt
Lab 1 Stepina Erika/Lab 1 Stepina Erika/: CMakeLists.txt  Lab 1 Stepina Erika.cpp  Lab 1 Stepina Erika.h
Lab_3_Stepina_Erika/: CMakeLists.txt
Lab_3_Stepina_Erika/Lab_3_Stepina_Erika/: CMakeLists.txt  Lab_3_Stepina_Erika.cpp  Lab_3_Stepina_Erika.h
Lab_4_Stepina_Erika/: CMakeLists.txt
Lab_4_Stepina_Erika/Lab_4_Stepina_Erika/: CMakeLists.txt  Lab_4_Stepina_Erika.cpp  Lab_4_Stepina_Erika.h
Lab_6_Stepina_Erika_variant_10/: CMakeLists.txt
Lab_6_Stepina_Erika_variant_10/Lab_6_Stepina_Erika_variant_10/: CMakeLists.txt  Lab_6_Stepina_Erika_variant_10.cpp  Lab_6_Stepina_Erika_variant_10.h  matrix_input.cpp  matrix_input.hpp  matrix_output.cpp  matrix_output.hpp  prime.cpp  prime.hpp
Lab_7_Stepina_Erika_variant_10/: CMakeLists.txt
Lab_7_Stepina_Erika_variant_10/Lab_7_Stepina_Erika_variant_10/: CMakeLists.txt  Lab_7_Stepina_Erika_variant_10.cpp  Lab_7_Stepina_Erika_variant_10.h
lab 2 Stepina Erika variant 10/: CMakeLists.txt
lab 2 Stepina Erika variant 10/lab 2 Stepina Erika variant 10/: CMakeLists.txt  lab 2 Stepina Erika variant 10.cpp  lab 2 Stepina Erika variant 10.h
